# pg-embedded

./: .gitignore  .npmignore  API.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_CHECKLIST.md  VERSION_MANAGEMENT.md  binding.cjs  binding.d.ts  binding.js  build.rs  example.js  index.cjs  index.d.ts  index.js  package.json  pnpm-lock.yaml  test-pg-startup.js  tsconfig.json
.cargo/: config.toml
.github/workflows/: CI.yml
__test__/: _test-utils.ts  async-integration.test.ts  basic.test.ts  connection-methods.test.ts  debug_simplified.test.ts  error-boundary.test.ts  logging.test.ts  pg_basebackup.test.ts  pg_dump.test.ts  pg_dumpall.test.ts  pg_isready.test.ts  pg_restore.test.ts  pg_rewind.test.ts  pg_rewind_simplified.test.ts  postgres-instance-methods.test.ts  psql.test.ts  stability.test.ts  thread-safety.test.ts
__test__/assets/: dump.sql  dumpall.sql
examples/: README.md  async-example.js  simple-example.js  sql-execution-example.js  structured-sql-example.js  sync-example.js  testing-example.js
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: README.md  build-check.js  extract-pg-version.cmd  extract-pg-version.js  extract-pg-version.ps1  prepare-release.js  publish-release.js  test-pg-startup.js  test-version-scripts.js  update-pg-version.js  validate-release.js
src/: error.rs  lib.rs  logger.rs  postgres.rs  settings.rs  types.rs  utils.rs  version.rs
src/tools/: common.rs  mod.rs  pg_basebackup.rs  pg_dump.rs  pg_dumpall.rs  pg_isready.rs  pg_restore.rs  pg_rewind.rs  psql.rs
test/: _test-utils.ts  async-integration.test.ts  basic.test.ts  connection-methods.test.ts  connection.test.ts  crud-comprehensive.test.ts  crud-operations.test.ts  error-boundary.test.ts  json-comprehensive.test.ts  json-final.test.ts  logging.test.ts  performance-benchmarks.test.ts  random-port.test.ts  resource-management.test.ts  sql-execution.test.ts  sql-file-execution.test.ts  stability.test.ts  structured-sql-execution.test.ts  sync-integration.test.ts  thread-safety.test.ts  version.test.ts
test/fixtures/: test-schema.sql
