[package]
authors = ["Kingsword <kingsword09@gmail.com>"]
edition = "2021"
name = "pg-embeded"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.1", default-features = false, features = [
  "async",
  "napi3",
] }
napi-derive = "3.0.0"
postgresql_embedded = { version = "0.19.0", default-features = false, features = [
  "blocking",
  "tokio",
  "theseus",  # 只使用theseus仓库，不使用zonky
  "native-tls",  # 使用系统原生TLS而不是rustls
  # "bundled",
] }
uuid = { version = "1.0", features = ["v4"] }
log = { version = "0.4", features = ["std"] }
tokio = { version = "1.0", features = ["time"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = "z"  # 优化大小而不是速度
panic = "abort"  # 减少panic处理代码
