[package]
authors = ["Kingsword <kingsword09@gmail.com>"]
edition = "2021"
name = "pg-embeded"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.1", default-features = false, features = [
  "async",
  "napi3",
] }
napi-derive = "3.0.0"
postgresql_embedded = { version = "0.19.0", default-features = false, features = [
  "blocking",
  "tokio",
  "theseus",
  "native-tls",
  "bundled",
] }
uuid = { version = "1.0", features = ["v4"] }
log = { version = "0.4", features = ["std"] }
tokio = { version = "1.0", features = ["time"] }

[target.x86_64-unknown-linux-gnu.dependencies]
openssl-sys = { version = "0.9.109", features = ["vendored"] }

[target.armv7-unknown-linux-gnueabihf.dependencies]
openssl-sys = { version = "0.9.109", features = ["vendored"] }

[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { version = "0.9.109", features = ["vendored"] }

[target.aarch64-unknown-linux-gnu.dependencies]
openssl-sys = { version = "0.9.109", features = ["vendored"] }

[target.aarch64-unknown-linux-musl.dependencies]
openssl-sys = { version = "0.9.109", features = ["vendored"] }

[target.aarch64-linux-android.dependencies]
openssl-sys = { version = "0.9.109", features = ["vendored"] }

[target.armv7-linux-androideabi.dependencies]
openssl-sys = { version = "0.9.109", features = ["vendored"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = "z"   # 优化大小而不是速度
panic = "abort"   # 减少panic处理代码
