[package]
authors = ["Kingsword <kingsword09@gmail.com>"]
edition = "2021"
name = "pg-embedded"
version = "0.2.1+pg17.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.2.4", default-features = false, features = [
  "async",
  "napi3",
] }
napi-derive = "3.2.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v7"] }
log = { version = "0.4", features = ["std"] }
tokio = { version = "1.0", features = ["time"] }
postgresql_commands = { version = "0.19.0", features = ["tokio"] }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
openssl-sys = { version = "0.9.109", features = ["vendored"] }
postgresql_embedded = { version = "0.19.0", default-features = false, features = [
  "tokio",
  "theseus",
  "rustls",
  "bundled",
] }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
postgresql_embedded = { version = "0.19.0", default-features = false, features = [
  "tokio",
  "theseus",
  "native-tls",
  "bundled",
] }

[build-dependencies]
napi-build = "2"
chrono = { version = "0.4", features = ["std"] }

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = "z"   # 优化大小而不是速度
panic = "abort"   # 减少panic处理代码
